// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapsible Webhook Variant 1`] = `
<div
  className="webhook css-dzay3o-CollapsibleWrapper e1jgqqjc0"
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="Collapsible"
  >
    <span
      aria-controls="collapsible-content-1642807409836"
      aria-disabled={false}
      aria-expanded={false}
      className="Collapsible__trigger is-closed"
      id="collapsible-trigger-1642807409836"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      style={null}
      tabIndex={null}
    >
      <div
        className="webhook css-1ywf0fz-StyledTrigger e1jgqqjc1"
      >
        <svg
          width={9}
        />
        <div
          className="css-1vsgzd0-flexStyles"
        >
          <div>
            customer_transfer_created
          </div>
           
          <div>
            SENDER
          </div>
        </div>
      </div>
    </span>
    <div
      aria-labelledby="collapsible-trigger-1642807409836"
      className="Collapsible__contentOuter"
      hidden={false}
      id="collapsible-content-1642807409836"
      onTransitionEnd={[Function]}
      role="region"
      style={
        Object {
          "WebkitTransition": "height 200ms linear",
          "height": 0,
          "msTransition": "height 200ms linear",
          "overflow": "hidden",
          "transition": "height 200ms linear",
        }
      }
    >
      <div
        className="Collapsible__contentInner"
      >
        <div
          className="visuallyhidden webhook css-1lrge1l-InnerContentWrapper e1jgqqjc2"
        >
          Code Block child
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapsible list 1`] = `
<div
  className="css-dzay3o-CollapsibleWrapper e1jgqqjc0"
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="Collapsible"
  >
    <span
      aria-controls="collapsible-content-1642807409801"
      aria-disabled={false}
      aria-expanded={false}
      className="Collapsible__trigger is-closed"
      id="collapsible-trigger-1642807409801"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      style={null}
      tabIndex={null}
    >
      <div
        className="css-1ywf0fz-StyledTrigger e1jgqqjc1"
      >
        My Customer has a retry status. What activity would they be able to engage in while being in ‘retry’ status, as it relates to the Dwolla Platform?
        <img
          alt="Open collapsible content"
          className="css-gup190-ImageStyles"
          src="test-image-stub"
        />
      </div>
    </span>
    <div
      aria-labelledby="collapsible-trigger-1642807409801"
      className="Collapsible__contentOuter"
      hidden={false}
      id="collapsible-content-1642807409801"
      onTransitionEnd={[Function]}
      role="region"
      style={
        Object {
          "WebkitTransition": "height 200ms linear",
          "height": 0,
          "msTransition": "height 200ms linear",
          "overflow": "hidden",
          "transition": "height 200ms linear",
        }
      }
    >
      <div
        className="Collapsible__contentInner"
      >
        <div
          className="visuallyhidden css-1lrge1l-InnerContentWrapper e1jgqqjc2"
        >
          <ul
            className=" css-1fruo89-baseTextStyles-baseTextStyles-listStyles-listStyles-UnorderedList-UnorderedList"
          >
            <li>
              Send funds - No
            </li>
            <li>
              Send funds - No
            </li>
            <li>
              Receive funds - Yes - Note that funds will only process to their balance and the transfer will stay pending until the Customer has been verified.
            </li>
            <li>
              Add and verify a bank funding source - Yes
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapsible paragraph 1`] = `
<div
  className="css-dzay3o-CollapsibleWrapper e1jgqqjc0"
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="Collapsible"
  >
    <span
      aria-controls="collapsible-content-1642807409825"
      aria-disabled={false}
      aria-expanded={false}
      className="Collapsible__trigger is-closed"
      id="collapsible-trigger-1642807409825"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      style={null}
      tabIndex={null}
    >
      <div
        className="css-1ywf0fz-StyledTrigger e1jgqqjc1"
      >
        My Customer has a document status. Can I submit more than one document via the API?
        <img
          alt="Open collapsible content"
          className="css-gup190-ImageStyles"
          src="test-image-stub"
        />
      </div>
    </span>
    <div
      aria-labelledby="collapsible-trigger-1642807409825"
      className="Collapsible__contentOuter"
      hidden={false}
      id="collapsible-content-1642807409825"
      onTransitionEnd={[Function]}
      role="region"
      style={
        Object {
          "WebkitTransition": "height 200ms linear",
          "height": 0,
          "msTransition": "height 200ms linear",
          "overflow": "hidden",
          "transition": "height 200ms linear",
        }
      }
    >
      <div
        className="Collapsible__contentInner"
      >
        <div
          className="visuallyhidden css-1lrge1l-InnerContentWrapper e1jgqqjc2"
        >
          <p
            className=" css-1n0n1up-baseTextStyles-baseTextStyles-paragraphStyles-paragraphStyles"
          >
            Yes, although this is not necessary, nor recommended. Dwolla manually reviews all documents, so sending more documents than necessary may slow down the verification process for your Customers.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
